--- a/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMHScrollBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMHScrollBarSkin.mxml
@@ -39,7 +39,7 @@ HScrollBarThumbSkin and HScrollBarTrackSkin classes, respectively.
     <fx:Script fb:purpose="styling">
         /* Define the skin elements that should not be colorized. 
            For scroll bar, the skin itself is colorized but the individual parts are not. */
-        static private const exclusions:Array = ["track", "thumb", "decrementButton", "incrementButton"];
+        static private const exclusions:Array = ["track", "thumb" ];
 
         /**
          * @private
