git-svn-id: http://svn.vdombox.ru/flextools/trunk@7351 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -4,8 +4,7 @@
 				xmlns:mx="library://ns.adobe.com/flex/mx" 
 				autoDrawBackground="true"
 				doubleClickEnabled="true"
-				doubleClick="doubleClickHandler(event)"
-				>
+				doubleClick="doubleClickHandler(event)">
 	<s:states>
 		<s:State name="normal" />
 		<s:State name="selected" />
