--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -107,11 +107,10 @@
 				</s:layout>
 				
 				<s:Group id="toolsetBar"
-						 height="100%" width="100%">
+						 width="100%" height="100%">
 					
 					<s:layout>
-						
-						<s:HorizontalLayout gap="20" />
+						<s:HorizontalLayout gap="20" paddingTop="-10"/>
 					</s:layout>
 				</s:Group>
 				
@@ -168,7 +167,7 @@
 	</s:VGroup>
 	
 	<mx:Image id="settingsButton" 
-			  x="30" y="62" 
+			  x="30" y="57" 
 			  smoothBitmapContent="true"
 			  source="@Embed('assets/login/logo.png')">
 		
