git-svn-id: http://svn.vdombox.ru/flextools/trunk@7366 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -273,8 +273,8 @@
 			
 			private function mouseMoveOnPageRenderer( event : MouseEvent ) : void
 			{
-				strXWritten.text = "x = " + (event.stageX - 137).toString() + "px";
-				strYWritten.text = "y = " + (event.stageY - 179).toString() + "px";
+				strXWritten.text = "x: " + (event.stageX - 137).toString() + "px";
+				strYWritten.text = "y: " + (event.stageY - 179).toString() + "px";
 			}
 			
 			public function set showLinking( value : Boolean ) : void
