--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -46,7 +46,7 @@
 		
 		<s:HGroup width="100%" height="40" horizontalAlign="right" 
 				  paddingTop="5" paddingBottom="5" paddingRight="10">
-			<components1:VdomButton id="save" label="Save" click="scriptEditor_saveHandler( event )"/>
+			<components1:VDOMButton id="save" label="Save" click="scriptEditor_saveHandler( event )"/>
 		</s:HGroup>
 	</s:VGroup>
 
