--- a/Help/Editor/v.01/src/Products.mxml
+++ b/Help/Editor/v.01/src/Products.mxml
@@ -130,7 +130,7 @@
 			{
 				if (event.detail==Alert.YES)
 		        {
-		        	sqlProxy.deleteProduct(listOfProducts.selectedItem.name, "en_US");
+		        	sqlProxy.deleteProduct(listOfProducts.selectedItem.name, listOfProducts.selectedItem.language);
 		        	showAllProducts();
 		        }else
 		        {
