bug fix (extra whitespace was pasted after link)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7372 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -40,6 +40,9 @@
 
 			private function init():void
 			{
+				XML.prettyPrinting = false;
+				XML.ignoreWhitespace = true;
+				
 				this.addEventListener(KeyboardEvent.KEY_UP,		onKeyboardKeyUp);
 				this.addEventListener(KeyboardEvent.KEY_DOWN,	onKeyboardKeyDown);
 			}
