git-svn-id: http://svn.vdombox.ru/flextools/trunk@7376 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
@@ -49,7 +49,7 @@
 				/*if ( comboBoxData )
 				{
 					comboBoxData.sort = new Sort();
-					comboBoxData.sort.fields = [ new SortField( "name", true ) ];
+					comboBoxData.sort.fields = [ new SortField( "name", true ), new SortField("label",true) ];
 					comboBoxData.refresh();
 				}*/
 				
