--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -51,6 +51,8 @@
 			
 			private var productXMLFile : File;
 			
+			//private var updater : AutoUpdateManager = new AutoUpdateManager();
+			
 			/***
 			 *
 			 * + сохранить экспортируемую хмл
