fix bug: in preview mode text is not highlited if change pages in tree when wysiwyg source mode turned on
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7388 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -99,9 +99,30 @@
 				{
 					htmlTxt = getHtmlSourceTxt(editorData, showPageToc);
 						
+				} else {
+					if (showPageToc)
+						htmlTxt = appendHighlightScriptToPageContent (htmlTxt);
+						
 				}
 				
 				return htmlTxt;
+			}
+			
+			private function appendHighlightScriptToPageContent(pageContent : String) : String
+			{
+				if (!pageContent)
+					return "";
+				
+				if (pageContent.indexOf(HtmlPageProperties.highlightAllTemplate) >= 0)
+					pageContent = pageContent.replace(HtmlPageProperties.highlightAllTemplate, "");
+				
+				if (pageContent.indexOf(HtmlPageProperties.jsCoreFileName) == -1)
+					return pageContent; 
+				
+				var pageBodyEndWithHighkightAllScript : String = HtmlPageProperties.highlightAllTemplate.concat("\n</body>");
+				
+				
+				return pageContent.replace("</body>",pageBodyEndWithHighkightAllScript);
 			}
 			
 			private static function getHtmlSourceTxt(bodyContent : String, showPageToc:Boolean = false) : String
@@ -127,6 +148,7 @@
 				return getHTMLWithoutPageToc(htmlTxt);
 				
 			}
+			
 			
 			private static function getHTMLWithoutPageToc(value:String) : String 
 			{
