git-svn-id: http://svn.vdombox.ru/flextools/trunk@7397 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -15,6 +15,12 @@
 			{
 				scroller.verticalScrollBar.setStyle("skinClass", VDOMVScrollBarSkin );
 				scroller.horizontalScrollBar.setStyle("skinClass", VDOMHScrollBarSkin );
+				addEventListener( MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
+			}
+			
+			private function mouseWheelHandler( event : MouseEvent ) : void
+			{
+				event.delta = event.delta > 0 ? 20 : -20;
 			}
 			
 		]]>
