--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -20,27 +20,33 @@
 			
 			import spark.events.IndexChangeEvent;
 			
-			protected function scroller_creationCompleteHandler(event:FlexEvent):void
+			protected function scroller_creationCompleteHandler( event : FlexEvent ) : void
 			{
 				// TODO Auto-generated method stub
 				scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
 				scroller.horizontalScrollBar.setStyle( "skinClass", VDOMHScrollBarSkin );
+				addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
 			}
 			
-			protected function showElementsView_creationCompleteHandler(event:FlexEvent):void
+			protected function showElementsView_creationCompleteHandler( event : FlexEvent ) : void
 			{
 				// TODO Auto-generated method stub
 				var sourceDropDownList : ArrayCollection = new ArrayCollection();
 				sourceDropDownList.addItem( "Full" );
 				sourceDropDownList.addItem( "Middle" );
-				sourceDropDownList.addItem( "Shot" );
+				sourceDropDownList.addItem( "Short" );
 				_showElementsView.dataProvider = sourceDropDownList;
 			}
 			
-			protected function _showElementsView_changeHandler(event:IndexChangeEvent):void
+			protected function _showElementsView_changeHandler( event : IndexChangeEvent ) : void
 			{
 				// TODO Auto-generated method stub
 				dispatchEvent( new WorkAreaEvent ( WorkAreaEvent.SHOW_ELEMENTS_STATE_CHANGED ) );
+			}
+			
+			private function mouseWheelHandler( event : MouseEvent ) : void
+			{
+				event.delta = event.delta > 0 ? 20 : -20;
 			}
 			
 		]]>
